--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="9236e765-3cf2-40fb-9a36-f7b38621acfa"></script>
   </body>
 </html>
