make website easily found by search engines

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="xLOwSyBn5MhJr7lf2rF16FwEQmOLBRyXlii_jN80OCg" />
     <link rel="icon" type="image/svg+xml" href="public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Portfolio</title>
+    <!-- <title>Personal Portfolio</title> -->
+    <title>Muhamad Rafif - Fullstack Developer</title>
+    <meta name="description" content="Portfolio Fullstack Developer spesialis React & Laravel." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://muhamadrafif.vercel.app/" />
+    <meta property="og:title" content="Muhamad Rafif - Portfolio" />
+    <meta property="og:description" content="Lihat karya dan project terbaru saya." />
+    <meta property="og:image" content="https://muhamadrafif.vercel.app/og-image.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:image" content="https://muhamadrafif.vercel.app/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
