remake og description

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://muhamadrafif.vercel.app/" />
-    <meta property="og:title" content="Muhamad Rafif - Portfolio" />
-    <meta property="og:description" content="Lihat karya dan project terbaru saya." />
+    <meta property="og:title" content="Muhamad Rafif - Fullstack Developer" />
+    <meta property="og:description" content="Jelajahi karya dan proyek terbaru saya sebagai seorang Fullstack Developer dengan keahlian di React, Vue, dan Laravel. Temukan solusi inovatif dan desain berkualitas tinggi yang saya tawarkan." />
     <meta property="og:image" content="https://muhamadrafif.vercel.app/og-image.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
