make loading animations with skeleton components and optimization seo with react helmet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <title>Personal Portfolio</title> -->
     <title>Muhamad Rafif - Fullstack Developer</title>
-    <meta name="description" content="Portfolio Fullstack Developer spesialis React & Laravel." />
+    <meta name="description" content="Portfolio Fullstack Developer spesialis React, Vue & Laravel." />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://muhamadrafif.vercel.app/" />
