performance and accessibility improvements

--- a/index.html
+++ b/index.html
@@ -2,25 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="google-site-verification" content="xLOwSyBn5MhJr7lf2rF16FwEQmOLBRyXlii_jN80OCg" />
+    <meta
+      name="google-site-verification"
+      content="xLOwSyBn5MhJr7lf2rF16FwEQmOLBRyXlii_jN80OCg"
+    />
     <link rel="icon" type="image/svg+xml" href="public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <title>Personal Portfolio</title> -->
     <title>Muhamad Rafif - Fullstack Developer</title>
-    <meta name="description" content="Portfolio Fullstack Developer spesialis React, Vue & Laravel." />
+    <meta
+      name="description"
+      content="Portfolio Fullstack Developer spesialis React, Vue & Laravel."
+    />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://muhamadrafif.vercel.app/" />
     <meta property="og:title" content="Muhamad Rafif - Fullstack Developer" />
-    <meta property="og:description" content="Jelajahi karya dan proyek terbaru saya sebagai seorang Fullstack Developer dengan keahlian di React, Vue, dan Laravel. Temukan solusi inovatif dan desain berkualitas tinggi yang saya tawarkan." />
-    <meta property="og:image" content="https://muhamadrafif.vercel.app/og-image.png" />
+    <meta
+      property="og:description"
+      content="Jelajahi karya dan proyek terbaru saya sebagai seorang Fullstack Developer dengan keahlian di React, Vue, dan Laravel. Temukan solusi inovatif dan desain berkualitas tinggi yang saya tawarkan."
+    />
+    <meta
+      property="og:image"
+      content="https://muhamadrafif.vercel.app/og-image.png"
+    />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:image" content="https://muhamadrafif.vercel.app/og-image.png" />
+    <meta
+      property="twitter:image"
+      content="https://muhamadrafif.vercel.app/og-image.png"
+    />
+
+    <link rel="preconnect" href="https://api-gateway.umami.dev" />
+    <link rel="preconnect" href="https://api-muhamadrafif.vercel.app" />
+    <link rel="preconnect" href="https://res.cloudinary.com" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="9236e765-3cf2-40fb-9a36-f7b38621acfa"></script>
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="9236e765-3cf2-40fb-9a36-f7b38621acfa"
+    ></script>
   </body>
 </html>
