--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <link rel="preconnect" href="https://api-gateway.umami.dev" />
     <link rel="preconnect" href="https://api-muhamadrafif.vercel.app" />
     <link rel="preconnect" href="https://res.cloudinary.com" />
+    <link
+      rel="dns-prefetch"
+      href="https://github-contributions-api.jogruber.de"
+    />
   </head>
   <body>
     <div id="root"></div>
